# candle_practice

./: Dockerfile  Makefile  README.md  entrypoint.sh
classification/: Cargo.toml
classification/src/: dataset.rs  lib.rs  tensor.rs
classification/src/dataset/: mnist.rs
docker/: Dockerfile  entrypoint.sh
sample/first/: Cargo.toml
sample/linear_layer/: Cargo.toml
tutorial/: Cargo.toml  README.md
tutorial/examples/: hf_hub.rs  hf_hub_async.rs  linear_layer.rs  mnist.rs  real_model.rs
